--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/myDb
 spring.datasource.username=student
 spring.datasource.password=qwerty
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
