--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/myDb
 spring.datasource.username=student
 spring.datasource.password=qwerty
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+student.avatars.dir.path=avatar
