--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=qwerty
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 student.avatars.dir.path=avatar
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
