--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/myDb
 spring.datasource.username=student
 spring.datasource.password=qwerty
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 student.avatars.dir.path=avatar
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 server.port=8080
